fix: add changes visible fade: none vs flex

--- a/style.sass
+++ b/style.sass
@@ -78,18 +78,20 @@ section
   width: 100%
   font-size: 24px
   text-align: center
-  bottom: none
+  border: none
   border-bottom: 1px solid #000
   outline: none
   transition: 1.3s
-  &:hover
-    background-color: rgba(97, 11, 11, 0.63)
-  &::after
-    position: absolute
-    right: 20px
-    content: "\25BC"
-    // ____ УБРАТЬ ЦВЕТ ___
-    // background-color: yellow
+
+.education-btn:hover
+  background-color: rgba(97, 11, 11, 0.63)
+
+.education-btn::after
+  position: absolute
+  right: 20px
+  content: "\25BC"
+  // ____ УБРАТЬ ЦВЕТ ___
+  background-color: yellow
 
 .active
   background-color: rgba(156, 16, 16, 0.467)
@@ -112,6 +114,8 @@ section
   padding: 0
   display: none
   overflow: hidden
+  // transition: max-height 0.2s ease-out
+
 
 .show
   display: flex
@@ -151,9 +155,38 @@ section
   width: 84%
   display: none
 
+.proj-slider-descr
+  width: 30%
+  padding: 20px 0
+  display: flex
+  flex-direction: column
+  justify-content: space-between
 
+.proj-slider-descr_title
+  display: flex
+  justify-content: space-between
+  align-items: center
+  padding: 0 10px
+  font-size: 24px
+  font-weight: bold
+
+// __________ JS __________
+
+.descr_show
+  display: block
 
 // ________ BUTTONS ________
+
+.sw_button
+  display: inline-block
+  padding: 5px 10px
+  height: 90%
+  border: 2px solid red
+  outline: none
+  cursor: pointer
+
+
+
 .project_next,
 .project_prev
   position: absolute
@@ -183,6 +216,65 @@ footer
   padding-top: 30px
   padding-bottom: 20px
 
+
+.iframe-wrap
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  min-height: 100%
+  background-color: pink
+  display: none
+  justify-content: center
+
+
+.iframe
+  width: 100%
+  min-height: 100%
+
+
+.iframe-button
+  position: fixed
+  width: 120px
+  height: 60px
+  right: 60px
+  font-size: 24px
+  font-weight: bold
+  border: 1px solid green
+  background-color: orange
+  border-radius: 10%
+  cursor: pointer
+  &:hover
+    opacity: 0.7
+
+
+
+#mode-button
+  bottom: 160px
+
+#back-button
+  bottom: 60px
+
+
+// __________ Animation __________
+
+.fade
+  animation-name: fade
+  animation-duration: 1.5s
+
+@-webkit-keyframes fade
+  from
+    opacity: .4
+  to
+    opacity: 1
+
+@keyframes fade
+  from
+    opacity: .4
+  to
+    opacity: 1
+
+
 // _________ MEDIA QUERY __________
 
 @media screen and (max-width: 768px)
@@ -198,3 +290,16 @@ footer
 @media screen and (max-width: 768px)
   .project-slider_btn
     width: 100%
+
+@media screen and (max-width: 768px)
+  #mode-button
+    display: none
+
+@media screen and (max-width: 768px)
+  .proj-slider-descr
+    width: 100%
+
+@media screen and (min-width: 769px)
+  .sw_button
+    display: none
+
